--- a/conicle-video-challenge-ios/App/Base.lproj/Main.storyboard
+++ b/conicle-video-challenge-ios/App/Base.lproj/Main.storyboard
@@ -99,6 +99,9 @@
                                         </constraints>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="pip.enter" catalog="system"/>
+                                        <connections>
+                                            <action selector="pipButtonTapped:" destination="NGF-k2-Nwy" eventType="touchUpInside" id="cca-7e-9Pk"/>
+                                        </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="CNx-6K-3Kl">
                                         <rect key="frame" x="16" y="699" width="361" height="44"/>
@@ -113,13 +116,13 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="8VR-20-2aC">
-                                                <rect key="frame" x="56" y="0.0" width="257.66666666666663" height="45"/>
+                                                <rect key="frame" x="56" y="0.0" width="261.66666666666669" height="45"/>
                                                 <connections>
                                                     <action selector="sliderValueChanged:" destination="NGF-k2-Nwy" eventType="valueChanged" id="peU-bm-bHy"/>
                                                 </connections>
                                             </slider>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pEq-8Z-Rws">
-                                                <rect key="frame" x="319.66666666666669" y="0.0" width="41.333333333333314" height="44"/>
+                                                <rect key="frame" x="323.66666666666669" y="0.0" width="37.333333333333314" height="44"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
